--- a/index.html
+++ b/index.html
@@ -21,11 +21,12 @@
     />
     <link rel="stylesheet" href="./assets/CSS/style.css" />
   </head>
-  <body class="bg-dark">
+  <body>
     <header class="sticky-top">
+      <!-- Navigation -->
       <nav class="container navbar navbar-dark navbar-expand-lg">
-        <div class="container-fluid">
-          <a href="./index.html" class="navbar-brand">Les Bardes d'Hypérion</a>
+        <div class="container-fluid justify-content-space-between">
+          <a href="./index.html" class="navbar-brand fw-bolder">Les Bardes d'Hypérion</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -39,7 +40,7 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item"><a href="./index.html" class="nav-link">Accueil</a></li>
+              <li class="nav-item"><a href="./index.html" class="nav-link active">Accueil</a></li>
               <li class="nav-item">
                 <a href="#" class="nav-link">Qu'est-ce qu'un Jeu de Rôle ?</a>
               </li>
@@ -49,33 +50,92 @@
           </div>
         </div>
       </nav>
+      <!-- Fin navigation -->
     </header>
 
+    <!-- Contenu principal -->
     <main class="container-lg">
-      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem, consequuntur. Aperiam at
-      recusandae voluptates soluta rerum fugiat voluptatum mollitia iusto blanditiis asperiores,
-      unde ad corrupti, autem odio suscipit repellendus rem! Lorem ipsum dolor sit amet consectetur
-      adipisicing elit. Velit, sint. Rerum sit non amet repellendus libero commodi distinctio earum.
-      Quisquam aut voluptas repellendus numquam! Libero voluptate nobis sit reprehenderit adipisci.
+      <img class="img-fluid" src="./assets/img/Banner.png" alt="Banner" />
+      <div class="row">
+        <h1 class="index-title text-center">Bienvenue, aventurier !</h1>
+      </div>
+      <article class="index-presentation row">
+        <h3>Qui sommes-nous ?</h3>
+        <p>
+          <span class="lettrine">F</span>ondée par des passionnés de jeux de rôles sur table,
+          l'association "Les Bardes d'Hypérion" a pour vocation de réunir les amateurs de jeux de
+          rôles, de soirées d'enquête, de jeux de cartes à collectionner, et d'événements exterieurs
+          tels que les Grandeur Nature.<br />
+          Notre association est animée par la passion du jeu, de l'imaginaire et du partage.
+        </p>
+      </article>
+      <div class="container">
+        <div class="row index-cards g-3 justify-content-center">
+          <div class="col-sm-6 col-lg-4">
+            <div class="card h-100">
+              <div class="card-body d-flex flex-column">
+                <h5 class="card-title">Qu'est-ce qu'un jeu de rôle ?</h5>
+                <p class="card-text small">
+                  Plongez dans des mondes envoûtants, devenez le héros de votre propre histoire et
+                  partagez des moments inoubliables avec des passionnés comme vous !
+                </p>
+                <div class="mt-auto">
+                  <a href="#" class="btn btn-sm">Découvrez</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6 col-lg-4">
+            <div class="card h-100">
+              <div class="card-body d-flex flex-column">
+                <h5 class="card-title">Nos activités</h5>
+                <p class="card-text small">
+                  Que vous soyez un novice curieux de découvrir ces univers ou un vétéran des jeux
+                  de rôles, vous êtes les bienvenus parmi les Bardes d'Hypérion. <br />
+                  Les horaires et les prochains évènements, c'est par ici !
+                </p>
+                <div class="mt-auto">
+                  <a href="#" class="btn btn-sm">Agenda</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6 col-lg-4">
+            <div class="card h-100">
+              <div class="card-body d-flex flex-column">
+                <h5 class="card-title">Renseignements</h5>
+                <p class="card-text small">
+                  Rejoignez-nous pour partager des moments inoubliables autour de notre passion
+                  commune.<br />
+                  Notre communauté est ouverte, amicale et prête à accueillir de nouveaux membres
+                  avides d'aventures et de divertissement.
+                </p>
+                <div class="mt-auto">
+                  <a href="#" class="btn btn-sm">Contactez-nous</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
+    <!-- Fin contenu principal -->
 
     <footer class="text-center mb-0 mt-3 pt-4">
       <div class="container border-top">
         <div class="row align-items-top col-lg pt-3">
-          <div class="col-sm small pb-4">
+          <div class="col-sm small pb-3">
             <h6>Nous contacter:</h6>
             <p class="pt-2">
               Les Bardes d'Hypérion<br />
               Auberge du Poney Fringant<br />
               3791 Bree<br />
-              <strong>
-                <a class="nav-link" href="mailto:bardes.hyperion@mordor.me"
-                  >bardes.hyperion@mordor.me
-                </a>
-              </strong>
+              <a class="text-decoration-none fw-bold" href="mailto:bardes.hyperion@mordor.me"
+                >bardes.hyperion@mordor.me
+              </a>
             </p>
           </div>
-          <div class="col-sm small pb-4">
+          <div class="col-sm small pb-3">
             <h6>Réseaux sociaux:</h6>
             <div class="container pt-2">
               <a
@@ -83,6 +143,7 @@
                 href="http://www.facebook.com"
                 target="_blank"
                 rel="noopener noreferrer"
+                style="color: #1877f2"
               >
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
@@ -96,13 +157,14 @@
                     d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"
                   />
                 </svg>
-                Facebook
+                <span class="fw-bold">Facebook</span>
               </a>
               <a
-                class="nav-link align-middle"
+                class="nav-link pb-2"
                 href="http://www.discord.com"
                 target="_blank"
                 rel="noopener noreferrer"
+                style="color: #738abd"
               >
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
@@ -116,11 +178,29 @@
                     d="M13.545 2.907a13.227 13.227 0 0 0-3.257-1.011.05.05 0 0 0-.052.025c-.141.25-.297.577-.406.833a12.19 12.19 0 0 0-3.658 0 8.258 8.258 0 0 0-.412-.833.051.051 0 0 0-.052-.025c-1.125.194-2.22.534-3.257 1.011a.041.041 0 0 0-.021.018C.356 6.024-.213 9.047.066 12.032c.001.014.01.028.021.037a13.276 13.276 0 0 0 3.995 2.02.05.05 0 0 0 .056-.019c.308-.42.582-.863.818-1.329a.05.05 0 0 0-.01-.059.051.051 0 0 0-.018-.011 8.875 8.875 0 0 1-1.248-.595.05.05 0 0 1-.02-.066.051.051 0 0 1 .015-.019c.084-.063.168-.129.248-.195a.05.05 0 0 1 .051-.007c2.619 1.196 5.454 1.196 8.041 0a.052.052 0 0 1 .053.007c.08.066.164.132.248.195a.051.051 0 0 1-.004.085 8.254 8.254 0 0 1-1.249.594.05.05 0 0 0-.03.03.052.052 0 0 0 .003.041c.24.465.515.909.817 1.329a.05.05 0 0 0 .056.019 13.235 13.235 0 0 0 4.001-2.02.049.049 0 0 0 .021-.037c.334-3.451-.559-6.449-2.366-9.106a.034.034 0 0 0-.02-.019Zm-8.198 7.307c-.789 0-1.438-.724-1.438-1.612 0-.889.637-1.613 1.438-1.613.807 0 1.45.73 1.438 1.613 0 .888-.637 1.612-1.438 1.612Zm5.316 0c-.788 0-1.438-.724-1.438-1.612 0-.889.637-1.613 1.438-1.613.807 0 1.451.73 1.438 1.613 0 .888-.631 1.612-1.438 1.612Z"
                   />
                 </svg>
-                Serveur Discord
+                <span class="fw-bold">Serveur Discord</span>
               </a>
             </div>
           </div>
         </div>
+      </div>
+      <div class="copyright py-2 small">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="16"
+          height="16"
+          fill="currentColor"
+          class="bi bi-c-circle"
+          viewBox="0 0 16 16"
+        >
+          <path
+            d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8Zm15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0ZM8.146 4.992c-1.212 0-1.927.92-1.927 2.502v1.06c0 1.571.703 2.462 1.927 2.462.979 0 1.641-.586 1.729-1.418h1.295v.093c-.1 1.448-1.354 2.467-3.03 2.467-2.091 0-3.269-1.336-3.269-3.603V7.482c0-2.261 1.201-3.638 3.27-3.638 1.681 0 2.935 1.054 3.029 2.572v.088H9.875c-.088-.879-.768-1.512-1.729-1.512Z"
+          />
+        </svg>
+        2023
+        <a class="text-decoration-none fw-bold" href="mailto:thomas.philipps@gmail.com"
+          >Thomas Philipps</a
+        >
       </div>
     </footer>
     <script
