--- a/index.html
+++ b/index.html
@@ -12,14 +12,28 @@
       name="keywords"
       content="jdr, rpg, jeu de role, medieval-fantastique, science-fiction, enquête, horreur, magic, table de jeu, GN, grandeur nature"
     />
+
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Tangerine:wght@700&display=swap"
+      rel="stylesheet"
+    />
+    <!-- End fonts -->
+
     <title>Les Bardes d'Hypérion</title>
+
+    <!-- Bootstrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="./assets/CSS/style.css" />
+
+    <!-- Specific styles -->
+    <link rel="stylesheet" href="./assets/CSS/index.css" />
   </head>
   <body>
     <header class="sticky-top">
@@ -57,10 +71,12 @@
     <main class="container-lg">
       <img class="img-fluid" src="./assets/img/Banner.png" alt="Banner" />
       <div class="row">
-        <h1 class="index-title text-center">Bienvenue, aventurier !</h1>
+        <h1 class="index-title text-center">
+          <span class="lettrine">B</span>ienvenue, Aventurier !
+        </h1>
       </div>
-      <article class="index-presentation row">
-        <h3>Qui sommes-nous ?</h3>
+      <article class="index-presentation row mx-1 mb-5">
+        <h3><span class="lettrine">Q</span>ui sommes-nous ?</h3>
         <p>
           <span class="lettrine">F</span>ondée par des passionnés de jeux de rôles sur table,
           l'association "Les Bardes d'Hypérion" a pour vocation de réunir les amateurs de jeux de
@@ -69,12 +85,16 @@
           Notre association est animée par la passion du jeu, de l'imaginaire et du partage.
         </p>
       </article>
-      <div class="container">
+      <div class="container mb-5">
         <div class="row index-cards g-3 justify-content-center">
           <div class="col-sm-6 col-lg-4">
             <div class="card h-100">
               <div class="card-body d-flex flex-column">
-                <h5 class="card-title">Qu'est-ce qu'un jeu de rôle ?</h5>
+                <div class="card-header">
+                  <h5 class="card-title indexCardTitle">
+                    <span class="lettrine">Q</span>u'est-ce qu'un jeu de rôle&nbsp;?
+                  </h5>
+                </div>
                 <p class="card-text small">
                   Plongez dans des mondes envoûtants, devenez le héros de votre propre histoire et
                   partagez des moments inoubliables avec des passionnés comme vous !
@@ -88,7 +108,11 @@
           <div class="col-sm-6 col-lg-4">
             <div class="card h-100">
               <div class="card-body d-flex flex-column">
-                <h5 class="card-title">Nos activités</h5>
+                <div class="card-header">
+                  <h5 class="card-title indexCardTitle">
+                    <span class="lettrine">N</span>os activités
+                  </h5>
+                </div>
                 <p class="card-text small">
                   Que vous soyez un novice curieux de découvrir ces univers ou un vétéran des jeux
                   de rôles, vous êtes les bienvenus parmi les Bardes d'Hypérion. <br />
@@ -103,7 +127,11 @@
           <div class="col-sm-6 col-lg-4">
             <div class="card h-100">
               <div class="card-body d-flex flex-column">
-                <h5 class="card-title">Renseignements</h5>
+                <div class="card-header">
+                  <h5 class="card-title indexCardTitle">
+                    <span class="lettrine">R</span>enseignements
+                  </h5>
+                </div>
                 <p class="card-text small">
                   Rejoignez-nous pour partager des moments inoubliables autour de notre passion
                   commune.<br />
@@ -121,6 +149,7 @@
     </main>
     <!-- Fin contenu principal -->
 
+    <!-- Footer -->
     <footer class="text-center mb-0 mt-3 pt-4">
       <div class="container border-top">
         <div class="row align-items-top col-lg pt-3">
@@ -203,6 +232,9 @@
         >
       </div>
     </footer>
+    <!-- Fin footer -->
+
+    <!-- Bootsrap script -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
