Pages and CSS sheets to be created

--- a/assets/HTML/contact.html
+++ b/assets/HTML/contact.html
@@ -33,14 +33,14 @@
     />
 
     <!-- Specific styles -->
-    <link rel="stylesheet" href="./assets/CSS/index.css" />
+    <link rel="stylesheet" href="../CSS/contacts.css" />
   </head>
   <body>
     <header class="sticky-top">
       <!-- Navigation -->
       <nav class="container navbar navbar-dark navbar-expand-lg">
         <div class="container-fluid justify-content-space-between">
-          <a href="./index.html" class="navbar-brand fw-bolder">Les Bardes d'Hypérion</a>
+          <a href="../../index.html" class="navbar-brand fw-bolder">Les Bardes d'Hypérion</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -54,18 +54,12 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item"><a href="./index.html" class="nav-link active">Accueil</a></li>
+              <li class="nav-item"><a href="../../index.html" class="nav-link">Accueil</a></li>
               <li class="nav-item">
-                <a href="./assets/HTML/roleplay.html" class="nav-link"
-                  >Qu'est-ce qu'un Jeu de Rôle ?</a
-                >
+                <a href="./roleplay.html" class="nav-link">Qu'est-ce qu'un Jeu de Rôle ?</a>
               </li>
-              <li class="nav-item">
-                <a href="./assets/HTML/activities.html" class="nav-link">Activités</a>
-              </li>
-              <li class="nav-item">
-                <a href="./assets/HTML/contact.html" class="nav-link">Contact</a>
-              </li>
+              <li class="nav-item"><a href="./activities.html" class="nav-link">Activités</a></li>
+              <li class="nav-item"><a href="./contact.html" class="nav-link active">Contact</a></li>
             </ul>
           </div>
         </div>
@@ -75,82 +69,10 @@
 
     <!-- Contenu principal -->
     <main class="container-lg">
-      <img class="img-fluid" src="./assets/img/Banner.png" alt="Banner" />
       <div class="row">
         <h1 class="index-title text-center">
-          <span class="lettrine">B</span>ienvenue, Aventurier !
+          <span class="lettrine">C</span>ontactez-nous
         </h1>
-      </div>
-      <article class="index-presentation row mx-1 mb-5">
-        <h3><span class="lettrine">Q</span>ui sommes-nous ?</h3>
-        <p>
-          <span class="lettrine">F</span>ondée par des passionnés de jeux de rôles sur table,
-          l'association "Les Bardes d'Hypérion" a pour vocation de réunir les amateurs de jeux de
-          rôles, de soirées d'enquête, de jeux de cartes à collectionner, et d'événements exterieurs
-          tels que les Grandeur Nature.<br />
-          Notre association est animée par la passion du jeu, de l'imaginaire et du partage.
-        </p>
-      </article>
-      <div class="container mb-5">
-        <div class="row index-cards g-3 justify-content-center">
-          <div class="col-sm-6 col-lg-4">
-            <div class="card h-100">
-              <div class="card-body d-flex flex-column">
-                <div class="card-header">
-                  <h5 class="card-title indexCardTitle">
-                    <span class="lettrine">Q</span>u'est-ce qu'un jeu de rôle&nbsp;?
-                  </h5>
-                </div>
-                <p class="card-text small">
-                  Plongez dans des mondes envoûtants, devenez le héros de votre propre histoire et
-                  partagez des moments inoubliables avec des passionnés comme vous !
-                </p>
-                <div class="mt-auto">
-                  <a href="./assets/HTML/roleplay.html" class="btn btn-sm">Découvrez</a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-6 col-lg-4">
-            <div class="card h-100">
-              <div class="card-body d-flex flex-column">
-                <div class="card-header">
-                  <h5 class="card-title indexCardTitle">
-                    <span class="lettrine">N</span>os activités
-                  </h5>
-                </div>
-                <p class="card-text small">
-                  Que vous soyez un novice curieux de découvrir ces univers ou un vétéran des jeux
-                  de rôles, vous êtes les bienvenus parmi les Bardes d'Hypérion. <br />
-                  Les horaires et les prochains évènements, c'est par ici !
-                </p>
-                <div class="mt-auto">
-                  <a href="./assets/HTML/activities.html" class="btn btn-sm">Agenda</a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-6 col-lg-4">
-            <div class="card h-100">
-              <div class="card-body d-flex flex-column">
-                <div class="card-header">
-                  <h5 class="card-title indexCardTitle">
-                    <span class="lettrine">R</span>enseignements
-                  </h5>
-                </div>
-                <p class="card-text small">
-                  Rejoignez-nous pour partager des moments inoubliables autour de notre passion
-                  commune.<br />
-                  Notre communauté est ouverte, amicale et prête à accueillir de nouveaux membres
-                  avides d'aventures et de divertissement.
-                </p>
-                <div class="mt-auto">
-                  <a href="./assets/HTML/contact.html" class="btn btn-sm">Contactez-nous</a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
       </div>
     </main>
     <!-- Fin contenu principal -->
