--- a/assets/HTML/roleplay.html
+++ b/assets/HTML/roleplay.html
@@ -74,6 +74,99 @@
           <span class="lettrine">Q</span>u'est-ce que le Jeu de Rôle&nbsp;?
         </h1>
       </div>
+      <div class="row">
+        <article>
+          <h5>Plongez dans l'univers enchanteur du jeu de rôles&nbsp;!</h5>
+          <p>
+            Imaginez-vous dans la peau d'un héros courageux, d'un redoutable sorcier ou d'un
+            intrépide explorateur, car c'est vous qui déterminez votre destinée ! Réunis autour
+            d'une table, vous et vos amis formez une compagnie hétéroclite, unissant vos forces pour
+            surmonter les défis les plus redoutables.
+          </p>
+          <p>
+            Les univers du jeu de rôles sont captivants : cité steampunk, forêt enchantée, vaste
+            empire fantastique, voyages intergalactiques ou mondes sous-marins. Vous pouvez incarner
+            des personnages complexes, façonnés par des passés tragiques ou porteurs d'un espoir
+            infini.
+          </p>
+          <p>
+            Les Maîtres du Jeu (MJ), conteurs talentueux, donnent vie aux paysages, insufflent un
+            esprit aux personnages non-joueurs et orchestrent les épreuves et les triomphes. Au-delà
+            de la quête elle-même, le jeu de rôles renforce les liens entre amis, créant des
+            souvenirs durables et des anecdotes à raconter encore et encore.
+          </p>
+          <p>
+            Que vous soyez un aventurier chevronné ou un novice intrépide, les portes du jeu de
+            rôles vous sont grandes ouvertes. Plongez dans cette aventure épique, car c'est une
+            invitation à rêver et à créer des histoires extraordinaires ensemble.
+          </p>
+          <h5>Que l'aventure commence&nbsp;!</h5>
+        </article>
+      </div>
+      <div class="row g-3 justify-content-center">
+        <div class="col-sm-4">
+          <div class="card h-100">
+            <img src="../img/tabletop.png" alt="Tabletop game" class="card-img-top" />
+            <div class="card-body d-flex flex-column">
+              <h5 class="card-title">Le Jeu de Rôle sur table</h5>
+              <p class="card-text">
+                Autour d'une table garnie de dés, feuilles de personnages et grimoires, parfois avec
+                des cartes et des figurines, vous incarnez des héros héroïques, des aventuriers
+                malicieux ou des créatures mystiques. <br />
+                Le Maître du Jeu vous transporte dans un univers enchanteur. Vous interagissez avec
+                vos amis, prenez des décisions cruciales, et dialoguez comme si vous étiez vraiment
+                vos personnages. <br />
+                Les scénarios se tissent au fil des actions, offrant des surprises et des
+                rebondissements inattendus. Vous explorez des mondes fantastiques, des cités
+                futuristes, ou des contrées ensorcelées. Vous résolvez des énigmes, défiez des
+                ennemis redoutables, et faites preuve de courage face à l'inconnu.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <div class="card h-100">
+            <img src="../img/helmet.png" alt="Vicking armor props" class="card-img-top" />
+            <div class="card-body d-flex flex-column">
+              <h5 class="card-title">Le Grandeur Nature ou G.N.</h5>
+              <p class="card-text">
+                Le jeu de rôle grandeur nature est une expérience unique où vous incarnez un héros,
+                un magicien, un chevalier, ou tout autre protagoniste de votre choix. <br />
+                Le jour J, vous enfilez votre costume, prenez votre équipement factice et rejoignez
+                un groupe de joueurs enthousiastes. Le lieu de jeu, souvent une forêt, un château ou
+                un parc, se transforme en scène de vos péripéties épiques. Le scénario est préparé
+                par des organisateurs qui dirigent l'histoire, mais c'est votre imagination et vos
+                actions qui feront évoluer la trame. Vous rencontrerez d'autres personnages joués
+                par des participants, des alliés ou des ennemis, avec lesquels vous interagirez à la
+                manière de votre héros. <br />
+                C'est un loisir où l'aspect compétitif est laissé de côté, privilégiant l'immersion
+                dans un univers féerique. Peu importe votre âge ou votre niveau, c'est une occasion
+                de se divertir et de laisser libre cours à votre imagination.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <div class="card h-100">
+            <img src="../img/cards.png" alt="Pokemon game" class="card-img-top" />
+            <div class="card-body d-flex flex-column">
+              <h5 class="card-title">Les jeux de cartes à collectionner</h5>
+              <p class="card-text">
+                Entrez dans le monde ensorcelant du jeu de cartes à collectionner, à la manière de
+                Magic ! Rassemblez vos cartes précieuses, prêt à défier vos amis ou devenir un
+                Maître du Planeswalker. <br />
+                L'esprit de compétition se mêle à l'esprit de camaraderie. Les joueurs échangent des
+                conseils, partagent des astuces et se congratulent pour leurs actions épiques. Le
+                jeu crée des liens entre les participants, de nouveaux amis se forment autour d'une
+                passion commune. Quand la bataille atteint son apogée, la tension est palpable.
+                <br />
+                La victoire est à portée de main pour l'un, tandis que d'autres préparent un
+                retournement de situation incroyable. Chacun garde espoir jusqu'au dernier instant.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
     <!-- Fin contenu principal -->
 
