Description page V : added CSS

--- a/assets/HTML/roleplay.html
+++ b/assets/HTML/roleplay.html
@@ -70,13 +70,13 @@
     <!-- Contenu principal -->
     <main class="container-lg">
       <div class="row">
-        <h1 class="index-title text-center">
+        <h1 class="main-title text-center">
           <span class="lettrine">Q</span>u'est-ce que le Jeu de Rôle&nbsp;?
         </h1>
       </div>
       <div class="row">
         <article>
-          <h5>Plongez dans l'univers enchanteur du jeu de rôles&nbsp;!</h5>
+          <h4 class="article-emphasis"><span class="lettrine">P</span>longez dans l'univers enchanteur du jeu de rôles&nbsp;!</h4>
           <p>
             Imaginez-vous dans la peau d'un héros courageux, d'un redoutable sorcier ou d'un
             intrépide explorateur, car c'est vous qui déterminez votre destinée ! Réunis autour
@@ -104,7 +104,8 @@
         </article>
       </div>
       <div class="row g-3 justify-content-center">
-        <div class="col-sm-4">
+        <h4 class="types-title border-top"><span class="lettrine">L</span>es types de jeux</h4>
+        <div class="col-sm-6 col-xl-4">
           <div class="card h-100">
             <img src="../img/tabletop.png" alt="Tabletop game" class="card-img-top" />
             <div class="card-body d-flex flex-column">
@@ -124,7 +125,7 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-6 col-xl-4">
           <div class="card h-100">
             <img src="../img/helmet.png" alt="Vicking armor props" class="card-img-top" />
             <div class="card-body d-flex flex-column">
@@ -146,7 +147,7 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-6 col-xl-4">
           <div class="card h-100">
             <img src="../img/cards.png" alt="Pokemon game" class="card-img-top" />
             <div class="card-body d-flex flex-column">
