--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <main class="container-lg">
       <img class="img-fluid" src="./assets/img/Banner.png" alt="Banner" />
       <div class="row">
-        <h1 class="index-title text-center">
+        <h1 class="main-title text-center">
           <span class="lettrine">B</span>ienvenue, Aventurier !
         </h1>
       </div>
