Activities page + CSS + removed useless CSS class

--- a/assets/HTML/roleplay.html
+++ b/assets/HTML/roleplay.html
@@ -76,7 +76,9 @@
       </div>
       <div class="row">
         <article>
-          <h4 class="article-emphasis"><span class="lettrine">P</span>longez dans l'univers enchanteur du jeu de rôles&nbsp;!</h4>
+          <h4 class="article-emphasis">
+            <span class="lettrine">P</span>longez dans l'univers enchanteur du jeu de rôles&nbsp;!
+          </h4>
           <p>
             Imaginez-vous dans la peau d'un héros courageux, d'un redoutable sorcier ou d'un
             intrépide explorateur, car c'est vous qui déterminez votre destinée ! Réunis autour
@@ -108,7 +110,7 @@
         <div class="col-sm-6 col-xl-4">
           <div class="card h-100">
             <img src="../img/tabletop.png" alt="Tabletop game" class="card-img-top" />
-            <div class="card-body d-flex flex-column">
+            <div class="card-body">
               <h5 class="card-title">Le Jeu de Rôle sur table</h5>
               <p class="card-text">
                 Autour d'une table garnie de dés, feuilles de personnages et grimoires, parfois avec
@@ -128,7 +130,7 @@
         <div class="col-sm-6 col-xl-4">
           <div class="card h-100">
             <img src="../img/helmet.png" alt="Vicking armor props" class="card-img-top" />
-            <div class="card-body d-flex flex-column">
+            <div class="card-body">
               <h5 class="card-title">Le Grandeur Nature ou G.N.</h5>
               <p class="card-text">
                 Le jeu de rôle grandeur nature est une expérience unique où vous incarnez un héros,
@@ -150,7 +152,7 @@
         <div class="col-sm-6 col-xl-4">
           <div class="card h-100">
             <img src="../img/cards.png" alt="Pokemon game" class="card-img-top" />
-            <div class="card-body d-flex flex-column">
+            <div class="card-body">
               <h5 class="card-title">Les jeux de cartes à collectionner</h5>
               <p class="card-text">
                 Entrez dans le monde ensorcelant du jeu de cartes à collectionner, à la manière de
