--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
         <div class="row index-cards g-3 justify-content-center">
           <div class="col-sm-6 col-lg-4">
             <div class="card h-100">
-              <div class="card-body d-flex flex-column">
+              <div class="card-body">
                 <div class="card-header">
-                  <h5 class="card-title indexCardTitle">
+                  <h5 class="card-title">
                     <span class="lettrine">Q</span>u'est-ce qu'un jeu de rôle&nbsp;?
                   </h5>
                 </div>
@@ -113,9 +113,9 @@
           </div>
           <div class="col-sm-6 col-lg-4">
             <div class="card h-100">
-              <div class="card-body d-flex flex-column">
+              <div class="card-body">
                 <div class="card-header">
-                  <h5 class="card-title indexCardTitle">
+                  <h5 class="card-title">
                     <span class="lettrine">N</span>os activités
                   </h5>
                 </div>
@@ -132,9 +132,9 @@
           </div>
           <div class="col-sm-6 col-lg-4">
             <div class="card h-100">
-              <div class="card-body d-flex flex-column">
+              <div class="card-body">
                 <div class="card-header">
-                  <h5 class="card-title indexCardTitle">
+                  <h5 class="card-title">
                     <span class="lettrine">R</span>enseignements
                   </h5>
                 </div>
