[HOTFIX] wrongly deleted CSS classes

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <div class="row index-cards g-3 justify-content-center">
           <div class="col-sm-6 col-lg-4">
             <div class="card h-100">
-              <div class="card-body">
+              <div class="card-body d-flex flex-column">
                 <div class="card-header">
                   <h5 class="card-title">
                     <span class="lettrine">Q</span>u'est-ce qu'un jeu de rôle&nbsp;?
@@ -113,7 +113,7 @@
           </div>
           <div class="col-sm-6 col-lg-4">
             <div class="card h-100">
-              <div class="card-body">
+              <div class="card-body d-flex flex-column">
                 <div class="card-header">
                   <h5 class="card-title">
                     <span class="lettrine">N</span>os activités
@@ -132,7 +132,7 @@
           </div>
           <div class="col-sm-6 col-lg-4">
             <div class="card h-100">
-              <div class="card-body">
+              <div class="card-body d-flex flex-column">
                 <div class="card-header">
                   <h5 class="card-title">
                     <span class="lettrine">R</span>enseignements
