--- a/assets/HTML/activities.html
+++ b/assets/HTML/activities.html
@@ -77,11 +77,9 @@
       <div class="row g-3 justify-content-center">
         <div class="col-sm-6">
           <div class="card h-100 text-center">
-            <div class="card-body">
+            <div class="card-body d-flex flex-column">
               <div class="card-header">
-                <h5 class="card-title">
-                  <span class="lettrine">N</span>os horaires&nbsp;:
-                </h5>
+                <h5 class="card-title"><span class="lettrine">N</span>os horaires&nbsp;:</h5>
               </div>
               <h5 class="card-title">Jeu de Rôle sur table</h5>
               <p class="card-text">
@@ -93,6 +91,10 @@
               <p class="card-text">
                 Mercredi : 14h00-18h00<br />
                 Samedi : 14h00-18h00
+              </p>
+              <p class="mt-auto">
+                Plus d'informations:
+                <a href="./contact.html" class="btn btn-sm">Contactez-nous</a>
               </p>
             </div>
           </div>
