--- a/assets/HTML/contact.html
+++ b/assets/HTML/contact.html
@@ -122,7 +122,7 @@
         </div>
         <div class="col-md-6 col-lg-4 mt-md-5 pt-lg-0">
           <h5 class="mb-3"><span class="lettrine">N</span>os adresses&nbsp;:</h5>
-          <p class="pt-2">
+          <p style="font-size: larger;">
             Les Bardes d'Hypérion<br />
             Auberge du Poney Fringant<br />
             3791 Bree<br />
@@ -133,7 +133,7 @@
         </div>
 
         <div class="col-md-6 col-lg-4 mt-md-5 pt-lg-0">
-          <h5 class="mb-3"><span class="lettrine">C</span>arte&nbsp;:</h5>
+          <h5 class="mb-3"><span class="lettrine">N</span>ous situer&nbsp;:</h5>
           <img src="../img/map.png" alt="carte de géolocalisation" class="img-fluid">
         </div>
       </div>
